feat: simple task manager
