# crest-annotation-backend/app/schemas/__init__.py
@@ -1,4 +1,11 @@
 from .label import Label, PatchLabel, CreateLabel
-from .object import BaseObject, Object, CreateObject, ImageRequest, ObjectFilters
+from .object import (
+    BaseObject,
+    SummaryObject,
+    Object,
+    CreateObject,
+    ImageRequest,
+    ObjectFilters,
+)
 from .project import Project, PatchProject, CreateProject
 from .sorting import SortDirection, Paginated
